Bug 83844 - FILEOPEN DOCX: HangingChars indent (and other *Chars indent variants) not parsed on import
Summary: FILEOPEN DOCX: HangingChars indent (and other *Chars indent variants) not par...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.6.2 release
Hardware: All All
: low minor
Assignee: Jonathan Clark
URL:
Whiteboard: BSA target:25.8.0 inReleaseNotes:25.8
Keywords: filter:docx
Depends on: 36709 163913
Blocks: CJK DOCX
  Show dependency treegraph
 
Reported: 2014-09-14 13:35 UTC by oversky0
Modified: 2026-03-28 16:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Word file has wrong format. (29.40 KB, application/vnd.ms-word.document.macroEnabled.12)
2014-09-14 13:35 UTC, oversky0
Details
Word 2007 vs LibO 4.3 (442.05 KB, image/png)
2014-09-14 18:02 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description oversky0 2014-09-14 13:35:37 UTC
Created attachment 106262 [details]
Word file has wrong format.

Problem description: 
See the following pictures.
Steps to reproduce:
Open the attached file.

Current behavior:
http://i.imgur.com/3il1bxq.png
Expected behavior:
http://i.imgur.com/lKP8SjC.png

              
Operating System: Windows 7
Version: 4.3.0.4 release
Comment 1 Yousuf Philips (jay) (retired) 2014-09-14 18:01:30 UTC
Hello oversky0,

Thank you for submitting the bug. I can confirm that the two bugs are available in 4.2.6 and 4.3.3 on Linux, but as we can only fix a single bug per bug report, i will go with incorrect paragraph indentation.

In LibO:
Before Text Indent: 17.09 cm
After Text Indent: -38.79 cm
First Line Indent: -38.79 cm

In MS Word:
Left : 0"
Right: 0"
Special: Hanging 5ch

It should also be noted that 3.3.0, 3.6.7 and 4.4 master states that the .doc file is corrupt and couldnt open it.

Version: 4.3.3.0.0+
Build ID: f3cdb7804a26c5cf0623d9b83130594f83372768
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-4-3, Time: 2014-09-12_04:11:44
Comment 2 Yousuf Philips (jay) (retired) 2014-09-14 18:02:17 UTC
Created attachment 106279 [details]
Word 2007 vs LibO 4.3
Comment 3 Xisco Faulí 2015-09-09 09:43:50 UTC
This issue is still present in

Version: 5.0.1.2
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: es-ES (es_ES)

on Windows 7 (64-bit)
Comment 4 Robinson Tryon (qubit) 2015-12-14 06:00:18 UTC Comment hidden (noise)
Comment 5 QA Administrators 2017-12-10 16:41:08 UTC Comment hidden (noise)
Comment 6 Cor Nouws 2017-12-28 22:49:25 UTC
partiallay improved in 
Version: 6.1.0.0.alpha0+
Build ID: a9b202a6b7000e7af34f2a639ca207122a3968bf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-12-26_23:09:36
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded


@oversky0@hotmail.com: can you please look at the issue and specify the current problem?
Comment 7 QA Administrators 2019-01-26 03:48:19 UTC Comment hidden (noise, obsolete)
Comment 8 Timur 2019-01-28 14:37:06 UTC
If bug is about "wrong position" for those 1) and 2) then:
- LO 6.3+ opens it as reported,
- but LO opens fine same DOC/DOCX if resaved in MSO. 
We may regard this as a wrong DOC or that LO should open it like MSO. Although I'm not an optimist in cases like this one.

As for "should read 12" it's still as reported. 
MSO setting is Centered, Indentation 0 cm, Special Hanging 0,79 cm.
LO opens as Before text 0,79 cm, After text 0 cm, First line 0,79 cm.
I'd say it's now reported as Bug 108493.
Comment 9 Timur 2020-07-31 18:12:51 UTC
Attached DOC is really DOCM and it can be edited.
If we remove the following, that line opens correctly:
<w:ind w:left="31680" w:hangingChars="500" w:firstLine="31680"/>

So, somehow this file was created wrongly but MSO fixes that and saves properly, so that LO opens it fine next time.
Comment 10 Justin L 2020-08-01 11:39:49 UTC
MS documentation says that hangingChars (in 100th of a character) supersedes firstLine (and hanging). So for sure firstLine should be ignored. It looks like we don't import hangingChars - it is just skipped, and so are all of the other *Chars versions of indent:
    endChars
    startChars
    leftChars
    rightChars
    hangingChars
    firstLineChars

The documentation does not specify the existence of w:left for w:ind, although LO has support for both left and right as well as start and end.

Does LO even know how to use a distance measurement of "char"? (I guess so, because I have seen it used in the UI.) I didn't see the definition of it in the documentation I was using.
Comment 11 QA Administrators 2022-08-02 03:31:07 UTC Comment hidden (obsolete, spam)
Comment 12 Justin L 2023-05-13 14:09:33 UTC
(In reply to Timur from comment #8)
> As for "should read 12" it's still as reported. 
This part is fine now in 7.6+

Still reproduce in 7.6+ the glaringly large empty space with the text starting at the right margin.
Comment 13 Jonathan Clark 2024-09-09 15:50:27 UTC
(In reply to Justin L from comment #10)
> Does LO even know how to use a distance measurement of "char"? (I guess so,
> because I have seen it used in the UI.) I didn't see the definition of it in
> the documentation I was using.

LO has a "ch" unit, but it is hard-coded to 210 twips. This is insufficient to support the *Chars indentation attributes, which are relative to the current font.

Bug 36709 tracks implementing a font-relative ch unit.
Comment 14 Commit Notification 2025-03-18 11:36:59 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbb46a2fd940d1b5f4b2782708756f67659c0f38

tdf#83844 DOCX import: implement Ch-based LR indentation

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.