tdf#83844 DOCX import: implement Ch-based LR indentation

Adds support for the leftChars, rightChars, hangingChars, and
firstLineChars attributes, which are used for character-based
indentation in CJK documents.

This change also updates import/export of DOC Ch-based hanging
indentation to correctly match the new behavior implemented for DOCX.

Change-Id: Ib9168d4b5fa14f37ae81ba6ebb5402211ff10fd0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183066
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>